--- a/info/contributors.tex
+++ b/info/contributors.tex
@@ -1,4 +1,4 @@
-\name{Rolly Maulana Awangga,} Informatics Research Center., Politeknik Pos Indonesia, Bandung,
+\name{Kadek Diva Krishna Murti \& Chandra Kirana Poetra} D4 Teknik Informatika., Politeknik Pos Indonesia, Bandung,
 Indonesia
 
 
