--- a/info/preface.tex
+++ b/info/preface.tex
@@ -1,5 +1,5 @@
-Buku ini diciptakan bagi yang awam dengan git sekalipun.
+Buku ini diciptakan bagi yang awam dengan pemrograman Android sekalipun.
 
-\prefaceauthor{R. M. Awangga}
+\prefaceauthor{D. K. Murti \& C. K. Poetra}
 \where{Bandung, Jawa Barat\\
-Februari, 2019}
+Januari, 2020}
