--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,7 @@
  
 \lstset{style=mystyle}
 
+
 %%%%%%%
 %% for times math: However, this package disables bold math (!)
 %% \mathbf{x} will still work, but you will not have bold math
@@ -128,16 +129,16 @@
 \begin{document}
 
 
-\booktitle{Cerdas Menguasai Git}
-\subtitle{Dalam 24 Jam}
+\booktitle{Aplikasi ActSpot (M-Absensi)}
+\subtitle{Android MySQL Project}
 
-\authors{Rolly M. Awangga\\
-\affil{Informatics Research Center}
+\authors{Kadek Diva Krishna Murti \& Chandra Kirana Poetra\\
+\affil{D4 Teknik Informatika, Politeknik Pos Indonesia}
 %Floyd J. Fowler, Jr.\\
 %\affil{University of New Mexico}
 }
 
-\offprintinfo{Cerdas Menguasai Git, First Edition}{Rolly M. Awangga}
+\offprintinfo{Aplikasi ActSpot (M-Absensi), First Edition}{Kadek Diva Krishna Murti \& Chandra Kirana Poetra}
 
 %% Can use \\ if title, and edition are too wide, ie,
 %% \offprintinfo{Survey Methodology,\\ Second Edition}{Robert M. Groves}
@@ -149,7 +150,7 @@
 \titlepage
 
 
-\begin{copyrightpage}{2019}
+\begin{copyrightpage}{2020}
 \input{info/copyrightpage}
 \end{copyrightpage}
 
@@ -199,11 +200,14 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 
 %%%%%%%%%%%%%%%%%%Isi Buku_
 
-\chapter{Judul Bagian Pertama}
+\chapter{API}
 \input{chapters/1}
 
-\chapter{Judul Bagian Kedua}
+\chapter{Mobile}
 \input{chapters/2}
+
+\chapter{Website}
+\input{chapters/1}
 
 
 
