--- a/info/introduction.tex
+++ b/info/introduction.tex
@@ -1,17 +1,18 @@
 
 %% optional, but if you want to list author:
 
-\introauthor{Rolly Maulana Awangga, S.T., M.T.}
-{Informatics Research Center\\
+\introauthor{Kadek Diva Krishna Murti \& Chandra Kirana Poetra}
+{D4 Teknik Informatika\\
+	Politeknik Pos Indonesia\\
 Bandung, Jawa Barat, Indonesia}
 
-Pada era disruptif  \index{disruptif}\index{disruptif!modern} 
-saat ini. git merupakan sebuah kebutuhan dalam sebuah organisasi pengembangan perangkat lunak.
-Buku ini diharapkan bisa menjadi penghantar para programmer, analis, IT Operation dan Project Manajer.
-Dalam melakukan implementasi git pada diri dan organisasinya.
+%Pada era disruptif  \index{disruptif}\index{disruptif!modern} 
+%saat ini. git merupakan sebuah kebutuhan dalam sebuah organisasi pengembangan perangkat lunak.
+%Buku ini diharapkan bisa menjadi penghantar para programmer, analis, IT Operation dan Project Manajer.
+%Dalam melakukan implementasi git pada diri dan organisasinya.
 
-Rumusnya cuman sebagai contoh aja biar keren\cite{awangga2018sampeu}.
+%Rumusnya cuman sebagai contoh aja biar keren\cite{awangga2018sampeu}.
 
-\begin{equation}
-ABC {\cal DEF} \alpha\beta\Gamma\Delta\sum^{abc}_{def}
-\end{equation}
+%\begin{equation}
+%ABC {\cal DEF} \alpha\beta\Gamma\Delta\sum^{abc}_{def}
+%\end{equation}
