--- a/main.tex
+++ b/main.tex
@@ -209,6 +209,9 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \chapter{Website}
 \input{chapters/1}
 
+\chapter{Web}
+\input{chapters/3}
+
 
 
 \bibliographystyle{IEEEtran} 
