--- a/main.tex
+++ b/main.tex
@@ -200,6 +200,9 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 
 %%%%%%%%%%%%%%%%%%Isi Buku_
 
+\chapter{Persiapan}
+\input{chapters/4}
+
 \chapter{API}
 \input{chapters/1}
 
