--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \documentclass{wileySix}
 
 \usepackage{graphicx}
+\usepackage{gensymb}
 \usepackage{listings}
 \usepackage{float}
 
@@ -201,20 +202,20 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 
 %%%%%%%%%%%%%%%%%%Isi Buku_
 
-\chapter{Persiapan}
-\input{chapters/4}
+%%\chapter{Persiapan}
+%%\input{chapters/4}
 
-\chapter{API}
-\input{chapters/1}
+\chapter{Bab 1 : GPS (Global Positioning System)}
+\input{chapters/1_GPS}
 
-\chapter{Mobile}
-\input{chapters/2}
+\chapter{Bab 2 : API,Java dan PHP}
+\input{chapters/2_Android}
 
-\chapter{Website}
-\input{chapters/1}
+\chapter{Bab 3 : Perancangan}
+\input{chapters/3_Perancangan}
 
-\chapter{Web}
-\input{chapters/3}
+\chapter{Bab 4 : Kode dan Implementasi}
+\input{chapters/4_Implementasi}
 
 
 
