--- a/bp3/main.tex
+++ b/bp3/main.tex
@@ -26,7 +26,9 @@
 \documentclass{wileysix}
 \UseRawInputEncoding
 \usepackage{graphicx}
+\usepackage{tabularx}
 \usepackage{listings}
+\usepackage{paralist}
 \usepackage{gensymb}
 \usepackage{float}
 
@@ -209,7 +211,7 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \input{chapters/2}
 
 \chapter{Perancangan}
-%\input{chapters/3}
+\input{chapters/3}
 
 \chapter{Pengkodean}
 \input{chapters/4}
