--- a/bp3/main.tex
+++ b/bp3/main.tex
@@ -131,8 +131,8 @@
 \begin{document}
 
 
-\booktitle{Project Android Simpel}
-\subtitle{Aplikasi Monitoring Kinerja Berbasis GPS (ActSPOT)}
+\booktitle{Project Android Sederhana Membuat Aplikasi Monitoring Kinerja Berbasis GPS}
+\subtitle{}
 
 \authors{M. Yusril H. S\\ Kadek Diva K. M.\\ Chandra Kirana P.\\
 \affil{D4 Teknik Informatika, Politeknik Pos Indonesia}
